[gd_scene load_steps=22 format=3 uid="uid://b3nywi3j43fbq"]

[ext_resource type="Script" uid="uid://bbnhnyem2n73k" path="res://core/interface/my_panel/MyPanel.gd" id="1_ixect"]
[ext_resource type="Texture2D" uid="uid://doyecvwh2b31d" path="res://assets/celestia/interface/base_box.png" id="2_7gi07"]
[ext_resource type="Texture2D" uid="uid://be2d3vwd08wbn" path="res://assets/celestia/interface/base_tab_button.png" id="3_3njho"]
[ext_resource type="PackedScene" uid="uid://dhijmeg3qwcwg" path="res://core/interface/my_panel/tooltip/PopupTooltip.tscn" id="3_xotm4"]
[ext_resource type="Texture2D" uid="uid://cpmddc0wt48qw" path="res://assets/celestia/interface/icons/inventory.png" id="4_ogu4c"]
[ext_resource type="Texture2D" uid="uid://d2d5embdk3je1" path="res://assets/celestia/interface/icons/stats.png" id="5_hitft"]
[ext_resource type="Texture2D" uid="uid://dpv26yrlxmg35" path="res://assets/celestia/interface/inventory/gradient_circle.png" id="6_hitft"]
[ext_resource type="Texture2D" uid="uid://cnq8hr0raofuk" path="res://assets/celestia/interface/icons/craft.png" id="6_mpay5"]
[ext_resource type="Script" uid="uid://4iidgsbidemo" path="res://core/interface/my_panel/tab_inventory/InventoryManager.gd" id="6_n6qys"]
[ext_resource type="PackedScene" uid="uid://bb0wjffuwv6sv" path="res://core/interface/my_panel/tab_inventory/slots/Slot.tscn" id="6_ogu4c"]
[ext_resource type="PackedScene" uid="uid://privosonjt0n" path="res://core/interface/my_panel/cursor/PanelCursor.tscn" id="7_03080"]
[ext_resource type="Script" uid="uid://flxwg31wj6uj" path="res://core/interface/my_panel/tab_stats/StatsManager.gd" id="11_ncsyl"]
[ext_resource type="Theme" uid="uid://cmhue8evj0uhb" path="res://assets/celestia/themes/bescii_titles_theme.tres" id="11_ne4yd"]
[ext_resource type="Theme" uid="uid://itbvstxdxmvc" path="res://assets/celestia/themes/tiny_mini_theme.tres" id="12_8uiqi"]
[ext_resource type="Script" uid="uid://dh4ynwqdmgs3r" path="res://core/interface/my_panel/tab_crafting/CraftManager.gd" id="14_6fao0"]
[ext_resource type="Texture2D" uid="uid://bc7unb74vq48o" path="res://assets/celestia/interface/crafting/big_arrow.png" id="15_e3j44"]
[ext_resource type="Script" uid="uid://damg5gh8i3wbs" path="res://core/interface/my_panel/tab_crafting/ResultSlot.gd" id="15_tnypv"]
[ext_resource type="Texture2D" uid="uid://b1lhjn0q2rfod" path="res://assets/celestia/interface/crafting/small_arrow.png" id="17_t334g"]
[ext_resource type="Texture2D" uid="uid://bil8yg8qhwdte" path="res://assets/celestia/interface/icons/build.png" id="18_03080"]
[ext_resource type="Texture2D" uid="uid://c704y800mhxbo" path="res://assets/celestia/interface/crafting/flame.png" id="19_t334g"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_t334g"]
color = Color(0.223529, 0.223529, 0.223529, 1)
grow_begin = 2.0
grow_end = 2.0

[node name="MyPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixect")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -195.0
offset_right = -66.9999
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_7gi07")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 5
patch_margin_top = 6
patch_margin_right = 5
patch_margin_bottom = 5

[node name="TabButtons" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.1
offset_top = -106.0
offset_right = -55.1
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="InventoryTabButton" type="TextureButton" parent="Background/TabButtons"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture_normal = ExtResource("3_3njho")
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="Background/TabButtons/InventoryTabButton"]
position = Vector2(12, 14)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_ogu4c")

[node name="StatsTabButton" type="TextureButton" parent="Background/TabButtons"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture_normal = ExtResource("3_3njho")
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="Background/TabButtons/StatsTabButton"]
position = Vector2(12, 14)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_hitft")

[node name="CraftTabButton" type="TextureButton" parent="Background/TabButtons"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture_normal = ExtResource("3_3njho")
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="Background/TabButtons/CraftTabButton"]
position = Vector2(12, 14.8)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_mpay5")

[node name="PanelCursor" parent="." instance=ExtResource("7_03080")]

[node name="PopupTooltip" parent="." instance=ExtResource("3_xotm4")]
layout_mode = 1

[node name="InventoryTab" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
script = ExtResource("6_n6qys")

[node name="CircleSprite" type="Sprite2D" parent="InventoryTab"]
visible = false
position = Vector2(6.40003, -29.2)
texture = ExtResource("6_hitft")

[node name="SlotsGroup" type="Control" parent="InventoryTab"]
anchors_preset = 0
offset_left = -222.4
offset_top = -121.6
offset_right = -182.4
offset_bottom = -81.6

[node name="PocketSlot0" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 198.8
offset_top = 191.6
offset_right = 214.8
offset_bottom = 207.6

[node name="PocketSlot1" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 219.2
offset_top = 191.6
offset_right = 235.2
offset_bottom = 207.6

[node name="PocketSlot2" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 239.2
offset_top = 191.6
offset_right = 255.2
offset_bottom = 207.6

[node name="PocketSlot3" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 259.2
offset_top = 191.6
offset_right = 275.2
offset_bottom = 207.6

[node name="BackpackSlot0" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 148.4
offset_top = 132.8
offset_right = 164.4
offset_bottom = 148.8

[node name="BackpackSlot1" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 166.4
offset_top = 132.8
offset_right = 182.4
offset_bottom = 148.8

[node name="BackpackSlot2" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 184.4
offset_top = 132.8
offset_right = 200.4
offset_bottom = 148.8

[node name="BackpackSlot3" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 202.4
offset_top = 132.8
offset_right = 218.4
offset_bottom = 148.8

[node name="BackpackSlot4" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 220.4
offset_top = 132.8
offset_right = 236.4
offset_bottom = 148.8

[node name="BackpackSlot5" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 238.0
offset_top = 132.8
offset_right = 254.0
offset_bottom = 148.8

[node name="BackpackSlot6" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 256.0
offset_top = 132.8
offset_right = 272.0
offset_bottom = 148.8

[node name="BackpackSlot7" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 274.0
offset_top = 132.8
offset_right = 290.0
offset_bottom = 148.8

[node name="BackpackSlot8" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 292.0
offset_top = 132.8
offset_right = 308.0
offset_bottom = 148.8

[node name="BackpackSlot9" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 310.0
offset_top = 132.8
offset_right = 326.0
offset_bottom = 148.8

[node name="BackpackSlot10" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 148.4
offset_top = 152.0
offset_right = 164.4
offset_bottom = 168.0

[node name="BackpackSlot11" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 166.4
offset_top = 152.0
offset_right = 182.4
offset_bottom = 168.0

[node name="BackpackSlot12" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 184.4
offset_top = 152.0
offset_right = 200.4
offset_bottom = 168.0

[node name="BackpackSlot13" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 202.4
offset_top = 152.0
offset_right = 218.4
offset_bottom = 168.0

[node name="BackpackSlot14" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 220.4
offset_top = 152.0
offset_right = 236.4
offset_bottom = 168.0

[node name="BackpackSlot15" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 238.0
offset_top = 152.0
offset_right = 254.0
offset_bottom = 168.0

[node name="BackpackSlot16" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 256.0
offset_top = 152.0
offset_right = 272.0
offset_bottom = 168.0

[node name="BackpackSlot17" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 274.0
offset_top = 152.0
offset_right = 290.0
offset_bottom = 168.0

[node name="BackpackSlot18" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 292.0
offset_top = 152.0
offset_right = 308.0
offset_bottom = 168.0

[node name="BackpackSlot19" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 310.0
offset_top = 152.0
offset_right = 326.0
offset_bottom = 168.0

[node name="BackpackSlot20" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 148.4
offset_top = 170.8
offset_right = 164.4
offset_bottom = 186.8

[node name="BackpackSlot21" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 166.4
offset_top = 170.8
offset_right = 182.4
offset_bottom = 186.8

[node name="BackpackSlot22" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 184.4
offset_top = 170.8
offset_right = 200.4
offset_bottom = 186.8

[node name="BackpackSlot23" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 202.4
offset_top = 170.8
offset_right = 218.4
offset_bottom = 186.8

[node name="BackpackSlot24" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 220.4
offset_top = 170.8
offset_right = 236.4
offset_bottom = 186.8

[node name="BackpackSlot25" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 238.0
offset_top = 170.8
offset_right = 254.0
offset_bottom = 186.8

[node name="BackpackSlot26" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 256.0
offset_top = 170.8
offset_right = 272.0
offset_bottom = 186.8

[node name="BackpackSlot27" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 274.0
offset_top = 170.8
offset_right = 290.0
offset_bottom = 186.8

[node name="BackpackSlot28" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 292.0
offset_top = 170.8
offset_right = 308.0
offset_bottom = 186.8

[node name="BackpackSlot29" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 310.0
offset_top = 170.8
offset_right = 326.0
offset_bottom = 186.8

[node name="HeadSlot" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 184.4
offset_top = 56.0
offset_right = 200.4
offset_bottom = 72.0
slot_type = "head"

[node name="ChestSlot" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 184.4
offset_top = 74.8
offset_right = 200.4
offset_bottom = 90.8
slot_type = "chestplate"

[node name="LegSlot" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 184.4
offset_top = 93.6
offset_right = 200.4
offset_bottom = 109.6
slot_type = "legs"

[node name="FeetSlot" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 184.4
offset_top = 112.8
offset_right = 200.4
offset_bottom = 128.8
slot_type = "feet"

[node name="RelicSlot0" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 256.0
offset_top = 56.0
offset_right = 272.0
offset_bottom = 72.0
slot_type = "relic"

[node name="RelicSlot1" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 274.0
offset_top = 56.0
offset_right = 290.0
offset_bottom = 72.0
slot_type = "relic"

[node name="RelicSlot2" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 256.0
offset_top = 74.8
offset_right = 272.0
offset_bottom = 90.8
slot_type = "relic"

[node name="RelicSlot3" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 274.0
offset_top = 74.8
offset_right = 290.0
offset_bottom = 90.8
slot_type = "relic"

[node name="RelicSlot4" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 256.0
offset_top = 93.6
offset_right = 272.0
offset_bottom = 109.6
slot_type = "relic"

[node name="RelicSlot5" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 274.0
offset_top = 93.6
offset_right = 290.0
offset_bottom = 109.6
slot_type = "relic"

[node name="AmmoSlot0" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 256.0
offset_top = 112.8
offset_right = 272.0
offset_bottom = 128.8
slot_type = "ammo"

[node name="AmmoSlot1" parent="InventoryTab/SlotsGroup" instance=ExtResource("6_ogu4c")]
visible = false
layout_mode = 0
offset_left = 274.0
offset_top = 112.8
offset_right = 290.0
offset_bottom = 128.8
slot_type = "ammo"

[node name="StatsTab" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_ncsyl")

[node name="VBoxContainer" type="VBoxContainer" parent="StatsTab"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -92.5
offset_right = 45.5
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="HBoxContainerTop" type="HBoxContainer" parent="StatsTab/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerTop"]
layout_mode = 2
theme = ExtResource("11_ne4yd")
text = "- Atributos -"

[node name="HBoxContainerDown" type="HBoxContainer" parent="StatsTab/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="VBoxContainerLeft" type="VBoxContainer" parent="StatsTab/VBoxContainer/HBoxContainerDown"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="LabelHP" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerLeft"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelAM" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerLeft"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelRS" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerLeft"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelLS" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerLeft"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelRG" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerLeft"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelMS" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerLeft"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="VBoxContainerRight" type="VBoxContainer" parent="StatsTab/VBoxContainer/HBoxContainerDown"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="LabelMP" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerRight"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelFR" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerRight"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelPN" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerRight"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelCrit" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerRight"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelCdR" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerRight"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="LabelUS" type="Label" parent="StatsTab/VBoxContainer/HBoxContainerDown/VBoxContainerRight"]
layout_mode = 2
theme = ExtResource("12_8uiqi")

[node name="CraftTab" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_6fao0")

[node name="HSeparator" type="HSeparator" parent="CraftTab"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -7.0
offset_right = 282.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/separator = SubResource("StyleBoxLine_t334g")

[node name="Forge" type="Control" parent="CraftTab"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputSlot" parent="CraftTab/Forge" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = -77.0
offset_top = -147.0
offset_right = -61.0
offset_bottom = -131.0
scale = Vector2(2.5, 2.5)
script = null

[node name="InputSlot2" parent="CraftTab/Forge" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = -20.0
offset_top = -99.9999
offset_right = -4.0
offset_bottom = -83.9999
scale = Vector2(2.5, 2.5)
script = null

[node name="InputSlot3" parent="CraftTab/Forge" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = -40.0
offset_top = -38.9999
offset_right = -24.0
offset_bottom = -22.9999
scale = Vector2(2.5, 2.5)
script = null

[node name="InputSlot4" parent="CraftTab/Forge" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = -111.0
offset_top = -37.9999
offset_right = -94.9999
offset_bottom = -21.9999
scale = Vector2(2.5, 2.5)
script = null

[node name="InputSlot5" parent="CraftTab/Forge" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = -135.0
offset_top = -99.9999
offset_right = -119.0
offset_bottom = -83.9999
scale = Vector2(2.5, 2.5)
script = null

[node name="ResultIndicator" type="Sprite2D" parent="CraftTab/Forge"]
position = Vector2(90, -25)
scale = Vector2(3.16667, 3.16667)
texture = ExtResource("15_e3j44")

[node name="ResultSlot" parent="CraftTab/Forge" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 165.0
offset_top = -45.0
offset_right = 181.0
offset_bottom = -29.0
scale = Vector2(2.5, 2.5)
script = ExtResource("15_tnypv")

[node name="HammerIndicator" type="Sprite2D" parent="CraftTab/Forge"]
position = Vector2(184, -75)
rotation = 1.5708
scale = Vector2(2.12912, 2.12912)
texture = ExtResource("17_t334g")

[node name="InteractHammer" type="Sprite2D" parent="CraftTab/Forge"]
position = Vector2(185, -123)
scale = Vector2(2.625, 2.625)
texture = ExtResource("18_03080")

[node name="Smelt" type="Control" parent="CraftTab"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FuelSlot" parent="CraftTab/Smelt" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 4.38028
offset_top = -38.0
offset_right = 20.3803
offset_bottom = -22.0
scale = Vector2(2.5, 2.5)
script = null

[node name="ConsumeIndicator" type="Sprite2D" parent="CraftTab/Smelt"]
position = Vector2(25.3803, -71)
scale = Vector2(2.14718, 2.14718)
texture = ExtResource("19_t334g")

[node name="InputSlot" parent="CraftTab/Smelt" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 5.38028
offset_top = -147.0
offset_right = 21.3803
offset_bottom = -131.0
scale = Vector2(2.5, 2.5)
script = null

[node name="ResultIndicator" type="Sprite2D" parent="CraftTab/Smelt"]
position = Vector2(100.38, -125)
scale = Vector2(1.78947, 1.78947)
texture = ExtResource("15_e3j44")

[node name="ResultSlot" parent="CraftTab/Smelt" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 155.38
offset_top = -144.0
offset_right = 171.38
offset_bottom = -128.0
scale = Vector2(2.5, 2.5)
script = ExtResource("15_tnypv")

[node name="HammerIndicator" type="Sprite2D" parent="CraftTab/Smelt"]
position = Vector2(-34.6197, -17)
scale = Vector2(1.73209, 1.73209)
texture = ExtResource("17_t334g")

[node name="InteractHammer" type="Sprite2D" parent="CraftTab/Smelt"]
position = Vector2(-98.6197, -15)
scale = Vector2(3.54753, 3.54753)
texture = ExtResource("18_03080")

[node name="Bless" type="Control" parent="CraftTab"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InputSlot" parent="CraftTab/Bless" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 16.3803
offset_top = -142.0
offset_right = 32.3803
offset_bottom = -126.0
scale = Vector2(2.5, 2.5)
script = null

[node name="ResultIndicator" type="Sprite2D" parent="CraftTab/Bless"]
position = Vector2(79.3803, -79)
rotation = 0.785398
scale = Vector2(1.78947, 1.78947)
texture = ExtResource("15_e3j44")

[node name="ResultSlot" parent="CraftTab/Bless" instance=ExtResource("6_ogu4c")]
layout_mode = 0
offset_left = 102.38
offset_top = -56.0
offset_right = 118.38
offset_bottom = -40.0
scale = Vector2(2.5, 2.5)
script = ExtResource("15_tnypv")

[node name="HammerIndicator" type="Sprite2D" parent="CraftTab/Bless"]
position = Vector2(36.3803, -33)
scale = Vector2(2.056, 2.056)
texture = ExtResource("17_t334g")

[node name="InteractHammer" type="Sprite2D" parent="CraftTab/Bless"]
position = Vector2(-35.6197, -32)
scale = Vector2(3.54753, 3.54753)
texture = ExtResource("18_03080")

[connection signal="pressed" from="Background/TabButtons/InventoryTabButton" to="." method="_on_inventory_tab_button_pressed"]
[connection signal="pressed" from="Background/TabButtons/StatsTabButton" to="." method="_on_stats_tab_button_pressed"]
[connection signal="pressed" from="Background/TabButtons/CraftTabButton" to="." method="_on_craft_tab_button_pressed"]
